Add user show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
   </head>
 
   <body>
+
+    <h2 class="text-2xl border-b-4 border-slate-300 p-4">
+      <%= link_to "Projects", root_path %>
+    </h2>
+
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
