Add sign in user

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Projects</h1>
-  <p>This is the Projects application. Log in to start.</p>
+  <p>This is the Projects application. 
+  <%= link_to "Log in", new_session_path %> to start.</p>
 </div>
