--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div>
   <h1 class="font-bold text-4xl">Projects</h1>
   <p>This is the Projects application. 
-  <%= link_to "Log in", new_session_path %> to start.</p>
+  <%= link_to "Sign in", new_session_path %> to start.</p>
 </div>
