--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
 
   <body>
 
-    <h2 class="text-2xl border-b-4 border-slate-300 p-4">
-      <%= link_to "Projects", root_path %>
-    </h2>
+
+
+    <%= render "layouts/flash" %>
+    <%= render "layouts/header" %>
 
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
