--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
-<h1 class="font-bold text-4xl"><%= @project.name %></h1>
+<h1 class="my-8 font-bold text-4xl"><%= @project.name %></h1>
 
 <div><%= @project.description %></div>
+
+<%= link_to "Edit", edit_user_project_path(@user, @project), 
+  class: "button" %>
