--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,7 @@
 <h1 class="my-8 font-bold text-4xl"><%= @project.name %></h1>
 
+<%= status_for(@project) %>
+
 <div><%= @project.description %></div>
 
 <%= link_to "Edit", edit_user_project_path(@user, @project), 
