--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,9 +1,13 @@
 <article class="mx-auto my-2 p-4 bg-slate-100 border rounded-md">
-<h2 class="font-bold text-2xl"><%= project.name %></h2>
+  <h2 class="font-bold text-2xl"><%= project.name %></h2>
 
-<p><%= project.description %></p>
+  <p><%= project.description %></p>
 
-<%= link_to "view &rarr;".html_safe,
-  user_project_path(user, project),
-  class: "uppercase text-sm text-right block" %>
+  <div class="flex flex-row justify-between">
+    <%= status_for(project) %>
+
+    <%= link_to "view &rarr;".html_safe,
+      user_project_path(user, project),
+      class: "uppercase text-sm text-right block" %>
+  </div>
 </article>
