Style project show

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -9,7 +9,7 @@
 
   <p>
     <%= f.label :description, class: "block" %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: "w-full h-96" %>
   </p>
 
   <p>
