--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -23,6 +23,14 @@
   .errors {
     @apply border-2 border-red-700 bg-yellow-200 p-4;
   }
+
+  h2 {
+    @apply font-bold text-2xl mb-2 mt-4;
+  }
+
+  p {
+    @apply mb-8;
+  }
 }
 
 
