Add rich text to project description

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -2,7 +2,7 @@
   <h2 class="font-bold text-2xl"><%= project.name %></h2>
 
   <p>
-  <%= strip_tags(project.description.truncate(200, separator: " ")) %>
+    <%= truncate(strip_tags(project.description.to_s), length: 200, separator: " ") %>
   </p>
 
   <div class="flex flex-row justify-between">
