--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,7 +2,9 @@
 
 <%= status_for(@project) %>
 
-<div><%= @project.description.html_safe %></div>
+<div>
+  <%= @project.description %>
+</div>
 
 <%= link_to "Edit", edit_user_project_path(@user, @project), 
   class: "button" %>
