Remove trix box height

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -9,7 +9,8 @@
 
   <p>
     <%= f.label :description, class: "block" %>
-    <%= f.rich_text_area :description, class: "w-full h-96" %>
+    <%#= f.rich_text_area :description, class: "w-full h-96" %>
+    <%= f.rich_text_area :description %>
   </p>
 
   <p>
