--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
 <h1 class="font-bold text-4xl my-8">New project</h1>
 
-<%= render 'form', user: @user, project: @project %>
+<%= render 'form', user: current_user, project: @project %>
 
