Edit and remove activities

--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,3 +1,4 @@
-<h2>New activity for <%= @project.name %></h2>
+<h2>Edit activity</h2>
 
 <%= render "form", project: @project, activity: @activity %>
+
