--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,1 +1,6 @@
-<%= activity.content %>
+<div class="p-2 mb-2 bg-slate-200 flex flex-row justify-between">
+  <%= activity.content %>
+
+  <%= link_to "Edit", edit_project_activity_path(project, activity) %>
+  <%= button_to "Remove", project_activity_path(project, activity), method: :delete %>
+</div>
