Don't add Make next to done activity

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -23,7 +23,7 @@
         class: "uppercase text-sm mr-4" %>
     <% end %>
 
-    <% unless activity.next? %>
+    <% unless activity.done? || activity.next? %>
       <%= button_to "Make Next", next_activities_path(activity),
         class: "uppercase text-sm" %>
     <% end %>
