--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,5 +1,8 @@
 <article class="mx-auto my-2 p-4 bg-slate-100 border rounded-md">
-  <h2 class="font-bold text-2xl"><%= project.name %></h2>
+  <div class="flex flex-row justify-between">
+    <h2 class="font-bold text-2xl"><%= project.name %></h2>
+<div class="w-6 h-6 p-2 rounded-full bg-indigo-400 flex justify-center items-center text-white font-bold text-sm"><%= project.priority %></div>
+  </div>
 
   <p>
     <%= truncate(strip_tags(project.description.to_s), length: 200, separator: " ") %>
