--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,7 @@
+<div class="flex flex-row justify-between align-center">
 <h1 class="mb-4 font-bold text-4xl"><%= @project.name %></h1>
+<div class="w-10 h-10 rounded-full bg-indigo-400 flex justify-center items-center text-white font-bold"><%= @project.priority %></div>
+</div>
 
 <%= status_for(@project) %>
 
