Style project list

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,6 +1,6 @@
 <div id="activity-<%= activity.id %>"
      class="p-2 mb-2 flex flex-col justify-between align-start
-            <%= activity.next? ? 'bg-amber-200' : 'bg-slate-200' %> ">
+  <%= activity.next? ? 'bg-amber-200 border-l-8 border-l-amber-400' : 'bg-slate-200' %> ">
 
   <%= activity.content %>
 
