--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -4,28 +4,34 @@
 
   <%= activity.content %>
 
-  <span class="flex flex-row">
+  <span class="flex flex-row space-x-6">
     <%= button_to "Edit", edit_project_activity_path(project, activity),
       method: :get,
-      class: "mr-4 text-sm uppercase" %>
+      class: "text-sm uppercase" %>
 
     <%= button_to "Remove", project_activity_path(project, activity),
       method: :delete, 
       form: {data: {turbo_confirm: "Are you sure?"}},
-      class: "uppercase text-sm mr-4" %>
+      class: "uppercase text-sm" %>
 
     <% if activity.done? %>
       <%= button_to "Reactivate", done_activity_path(activity),
         method: :delete,
-        class: "uppercase text-sm mr-4" %>
+        class: "uppercase text-sm" %>
     <% else %>
       <%= button_to "Done", done_activities_path(activity),
-        class: "uppercase text-sm mr-4" %>
+        class: "uppercase text-sm" %>
     <% end %>
 
     <% unless activity.done? || activity.next? %>
       <%= button_to "Make Next", next_activities_path(activity),
         class: "uppercase text-sm" %>
+    <% end %>
+
+    <% if activity.done? %>
+      <span>Done <%= time_ago_in_words(activity.updated_at) %> ago</span>
+    <% else %>
+      <span>Created <%= time_ago_in_words(activity.created_at) %> ago</span>
     <% end %>
 
   </span>
