--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -4,34 +4,34 @@
 
   <%= activity.content %>
 
-  <span class="flex flex-row space-x-6">
-    <%= button_to "Edit", edit_project_activity_path(project, activity),
-      method: :get,
-      class: "text-sm uppercase" %>
+  <span class="flex flex-row space-x-4 items-center">
+    <%= button_to edit_icon,
+      edit_project_activity_path(project, activity),
+      method: :get %>
 
-    <%= button_to "Remove", project_activity_path(project, activity),
+    <%= button_to remove_icon, project_activity_path(project, activity),
       method: :delete, 
-      form: {data: {turbo_confirm: "Are you sure?"}},
+      form: {data: {turbo_confirm: "This item will be deleted. Are you sure?"}},
       class: "uppercase text-sm" %>
 
     <% if activity.done? %>
-      <%= button_to "Reactivate", done_activity_path(activity),
+      <%= button_to reactivate_icon, done_activity_path(activity),
         method: :delete,
         class: "uppercase text-sm" %>
     <% else %>
-      <%= button_to "Done", done_activities_path(activity),
+      <%= button_to done_icon, done_activities_path(activity),
         class: "uppercase text-sm" %>
     <% end %>
 
     <% unless activity.done? || activity.next? %>
-      <%= button_to "Make Next", next_activities_path(activity),
+      <%= button_to make_next_icon, next_activities_path(activity),
         class: "uppercase text-sm" %>
     <% end %>
 
     <% if activity.done? %>
-      <span>Done <%= time_ago_in_words(activity.updated_at) %> ago</span>
+      <span class="text-xs">Done <%= time_ago_in_words(activity.updated_at) %> ago</span>
     <% else %>
-      <span>Created <%= time_ago_in_words(activity.created_at) %> ago</span>
+      <span class="text-xs">Created <%= time_ago_in_words(activity.created_at) %> ago</span>
     <% end %>
 
   </span>
