Add padding to buttons

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -4,7 +4,7 @@
 
   <%= activity.content %>
 
-  <span class="flex flex-row space-x-4 items-center">
+  <span class="flex flex-row space-x-4 items-center pt-2">
     <%= button_to edit_icon,
       edit_project_activity_path(project, activity),
       method: :get %>
