--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,10 @@
-<div class="flex flex-row justify-between items-center">
-  <h1 class="mb-4 font-bold text-3xl"><%= @project.name %></h1>
+<div class="flex flex-col md:flex-row md:justify-between">
+  <h1 class="mb-2 md:mb-4 font-bold text-3xl"><%= @project.name %></h1>
 
-  <div class="flex space-x-6 items-center">
+  <div class="flex flex-row space-x-4 items-center justify-start mb-4">
     <%= status_for(@project) %>
 
-    <div class="w-10 h-10 rounded-full bg-indigo-400 flex justify-center
+    <div class="w-8 h-8 rounded-full bg-indigo-400 flex justify-center
                 items-center text-white font-bold">
       <%= @project.priority %>
     </div>
