--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -6,9 +6,9 @@
 @layer components {
   .button {
     @apply rounded-md border-sky-800 bg-sky-300
-    py-2 px-4 my-8 mx-auto
+    py-2 px-4
     inline-block
-    uppercase 
+    uppercase text-center
     hover:bg-sky-400;
   }
 
