--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,14 +2,15 @@
   <%= link_to "Projects", root_path %>
 </h2>
 
-<nav class="py-4 flex flex-row bg-slate-200">
+<nav class="py-4 flex flex-row bg-slate-200 space-x-4">
 
   <% if current_user %>
-    <%= link_to current_user.name, current_user, class: "mx-4" %>
-    <%= link_to "My Projects", projects_path, class: "mx-4" %>
-    <%= button_to "Sign out", session_path, method: :delete, class: "mx-4" %> 
+    <%= link_to current_user.name, current_user %>
+    <%= link_to "My Projects", projects_path %>
+    <%= link_to "Done Projects", done_projects_path %>
+    <%= button_to "Sign out", session_path, method: :delete %> 
   <% else %>
-    <%= link_to "Sign in", new_session_path, class: "mx-4" %> 
+    <%= link_to "Sign in", new_session_path %> 
   <% end %>
 </nav>
 
