--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,7 +1,19 @@
 <article class="mx-auto my-2 p-4 bg-slate-100 border rounded-md">
 
-  <div class="flex flex-row justify-between items-center">
-    <h2 class="font-bold text-xl mt-0"><%= project.name %></h2>
+  <div class="flex flex-col justify-between items-start">
+    <div class="w-full">
+
+      <div class="w-full flex flex-row justify-between">
+        <span class="uppercase text-xs">created on <%= project.created_at.to_s(:default) %></span>
+
+        <% if project.done? %>
+          <span class="uppercase text-xs">done on <%= project.updated_at.to_s(:default) %></span>
+        <% end %>
+      </div>
+
+      <h2 class="font-bold text-xl mt-0"><%= project.name %></h2>
+
+    </div>
 
     <div class="flex space-x-6">
       <div class="w-6 h-6 p-2 rounded-full bg-indigo-400 flex justify-center
