--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
 
   <body>
 
-
-
     <%= render "layouts/flash" %>
     <%= render "layouts/header" %>
 
     <main class="container mx-auto mt-8 px-5">
       <%= yield %>
     </main>
+
+    <%= render "layouts/footer" %>
   </body>
 </html>
