Add link to project

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,26 +1,28 @@
-<article class="mx-auto my-2 p-4 bg-slate-100 border rounded-md">
+<%= link_to project_path(project) do %>
+  <article class="mx-auto my-2 p-4 bg-slate-100 border rounded-md">
 
-  <div class="flex flex-row justify-between items-center">
+    <div class="flex flex-row justify-between items-center">
 
-    <div class="flex flex-col justify-between">
-      <%= date_for(project) %>
-      <h2 class="font-bold text-xl mt-0"><%= project.name %></h2>
+      <div class="flex flex-col justify-between">
+        <%= date_for(project) %>
+        <h2 class="font-bold text-xl mt-0"><%= project.name %></h2>
+      </div>
+
+      <%= priority_for(project) %>
     </div>
 
-    <%= priority_for(project) %>
-  </div>
-
-  <span class="mb-2 block">
-    <%= truncate(strip_tags(project.description.to_s), length: 200, separator: " ") %>
-  </span>
-
-  <div class="flex flex-row justify-between items-center">
-    <span class="font-bold uppercase text-xs">
-      <%= pluralize(project.activities.todo.count, 'activity') %>
+    <span class="mb-2 block">
+      <%= truncate(strip_tags(project.description.to_s), length: 200, separator: " ") %>
     </span>
 
-    <%= link_to "view &rarr;".html_safe,
-      project_path(project),
-      class: "uppercase text-sm text-right block" %>
-  </div>
-</article>
+    <div class="flex flex-row justify-between items-center">
+      <span class="font-bold uppercase text-xs">
+        <%= pluralize(project.activities.todo.count, 'activity') %>
+      </span>
+
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3" />
+      </svg>
+    </div>
+  </article>
+<% end %>
