Edit form button more space

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <p>
+  <p class="mt-8">
   <% if project.persisted? %>
     <%= f.submit "Update project", class: "button" %>
   <% else %>
