--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,8 @@
 <div class="flex flex-col md:flex-row md:justify-between">
   <h1 class="mb-2 md:mb-4 font-bold text-3xl"><%= @project.name %></h1>
 
+  <%= cover(@project) %>
+
   <div class="flex flex-row space-x-4 items-center justify-start mb-4">
     <%= status_for(@project) %>
 
