--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<div class="bg-slate-800 text-white text-sm uppercase p-8 text-center">
-  &copy; 2022 - Cesare Ferrari
+<div class="bg-slate-800 text-white text-xs uppercase p-8 text-center">
+  &copy; 2022 - Cesare Ferrari - all rights reserved
 </div>
