--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
-<div>
+<div class="text-base">
   <h1 class="font-bold text-4xl">Projects</h1>
-  <p>This is the Projects application. 
-  <%= link_to "Sign in", new_session_path %> to start.</p>
+
+  <p>This is the Projects application.</p>
+
+  <p><%= link_to "Sign in", new_session_path, class: "text-indigo-600 underline" %> to start.</p>
 </div>
