Display embedded pdf

--- a/app/views/active_storage/blobs/_blob.html.erb
+++ b/app/views/active_storage/blobs/_blob.html.erb
@@ -1,5 +1,15 @@
 <figure class="attachment attachment--<%= blob.representable? ? "preview" : "file" %> attachment--<%= blob.filename.extension %>">
-  <% if blob.representable? %>
+
+
+  <% if blob.content_type == 'application/pdf' %>
+
+    <embed src="<%= rails_blob_url(blob) %>" width="800" height="800" type="application/pdf">
+
+  <% elsif blob.representable? %>
+
+
+
+  <%# if blob.representable? %>
     <%= image_tag blob.representation(resize_to_limit: local_assigns[:in_gallery] ? [ 800, 600 ] : [ 1024, 768 ]) %>
   <% end %>
 
