--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,8 @@
 <% @activities.each do |activity| %>
   <div class="border-b border-sky-500 my-2 py-2">
     <h3 class="text-xs uppercase text-slate-500 font-bold tracking-wide">
-      <%= link_to activity.project.name, activity.project %>
+      <%= link_to activity.project.name, activity.project %> 
+      <%= priority_for(activity.project) %>
     </h3>
     <%= activity.content %>
   </div>
