Change next header

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -33,7 +33,7 @@
 </div>
 
 <% if @next %>
-  <h2 class="mt-8 mb-4">To do</h2>
+  <h2 class="mt-8 mb-4">Next</h2>
 <%= render("activities/activity", project: @project, activity: @next) %>
 <% end %>
 
