--- a/app/views/next_activities/create.turbo_stream.erb
+++ b/app/views/next_activities/create.turbo_stream.erb
@@ -1,3 +1,5 @@
-<%= turbo_stream.replace "next_activity", partial: "activities/activity", locals: {activity: @activity, project: @project} %>
+<%#= turbo_stream.replace "next_activity", partial: "activities/activity", locals: {activity: @activity, project: @project} %>
 
-<%#= turbo_stream.update "activities", partial: "activities/activity", locals: {activity: @activity, project: @project, todos: @todos} %>
+<%= turbo_stream.update "activities",
+  partial: "activities/activities",
+  locals: {activities: @activities, project: @project} %>
